# bevy_hourglass

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build_wasm.sh
.github/workflows/: deploy-pages.yml  rust.yml
examples/: 2d_mesh_hourglass.rs  2d_mesh_hourglass_with_ui.rs  auto_flip_mayhem.rs  curve_styles_demo.rs  flip_demo.rs  loading_demo.rs  morphing_shape_demo.rs  rainbow_sand_color_demo.rs  sand_splash_demo.rs  simple.rs  simple_with_ui.rs  simplest.rs
src/: components.rs  curves.rs  events.rs  lib.rs  mesh_hourglass.rs  plugin.rs  resources.rs  sprite_hourglass.rs  systems.rs
src/bundles/: hourglass_bundle.rs  mod.rs
src/components/: hourglass.rs  hourglass_component.rs  interactable.rs  mod.rs  rotation_state.rs
src/events/: mod.rs
src/implementations/: mod.rs
src/implementations/sprite/: mod.rs  sprite_bundle.rs  sprite_container.rs  sprite_hourglass.rs  sprite_sand.rs
src/resources/: hourglass_config.rs  mod.rs
src/systems/: interaction.rs  mod.rs  rotation.rs  update.rs
src/traits/: container.rs  flip_behavior.rs  hourglass.rs  mod.rs  sand.rs
wasm/: README.md  index.html
