[package]
name = "bevy_hourglass"
version = "0.1.0"
edition = "2021"
description = "A flexible hourglass plugin for Bevy applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edouardpoitras/bevy_hourglass"
keywords = ["bevy", "gamedev", "hourglass", "timer"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.16.0"
earcutr = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "console"
]}

[features]
default = []
